src/snapshots/rura__app__tests__live_mode_confirm.snap
---
source: src/app.rs
assertion_line: 821
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Confirm entering LIVE mode ──────────────────────────────┐                    "
"                    │                                                          │                    "
"                    │            Warning: This might be dangerous!             │                    "
"                    │                                                          │                    "
"                    │   Commands will be executed automatically as you type.   │                    "
"                    │                                                          │                    "
"                    │                       [Y]es / [N]o                       │                    "
"                    │                                                          │                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                   ^C Quit Enter Execute F1 Help F11 Live UC F12 Live ^M Multi                  L:0 "
