src/snapshots/rura__app__tests__live_mode_full_confirm.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌ Confirm entering LIVE mode ──────────────────────────────┐                    "
"                    │                                                          │▓                   "
"                    │            WARNING: THIS MIGHT BE DANGEROUS!             │▓                   "
"                    │                                                          │▓                   "
"                    │   Commands will be executed automatically as you type.   │▓                   "
"                    │                                                          │▓                   "
"                    │                       [Y]es / [N]o                       │▓                   "
"                    │                                                          │▓                   "
"                    └──────────────────────────────────────────────────────────┘▓                   "
"                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                        F1 Help Ctrl+C Quit                                     L:0 "
