src/snapshots/rura__app__tests__main_screen_help.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                           ┌ Keys ──────────────────────────────────────┐                           "
"                           │                                            │▓                          "
"                           │                  Commands                  │▓                          "
"                           │enter        - Execute full command         │▓                          "
"                           │alt+\        - Execute until cursor         │▓                          "
"                           │alt+|        - Execute before cursor        │▓                          "
"                           │alt+i        - Reset input                  │▓                          "
"                           │ctrl+g       - Cancel running command       │▓                          "
"                           │                                            │▓                          "
"                           │f9           - Toggle execution details     │▓                          "
"                           │f12          - Toggle Live mode             │▓                          "
"                           │f11          - Toggle Live Until Cursor mode│▓                          "
"                           │                                            │▓                          "
"                           │               Subcommand edit              │▓                          "
"                           │alt+left     - Go to previous subcommand    │▓                          "
"                           │alt+right    - Go to next subcommand        │▓                          "
"                           │alt+c        - Copy current subcommand      │▓                          "
"                           │alt+x        - Cut current subcommand       │▓                          "
"                           │alt+v        - Paste subcommand after       │▓                          "
"                           │                                            │▓                          "
"                           │                 Navigation                 │▓                          "
"                           │up           - Scroll up                    │▓                          "
"                           │down         - Scroll down                  │▓                          "
"                           │pageup       - Scroll page up               │▓                          "
"                           │pagedown     - Scroll page down             │▓                          "
"                           │alt+l        - Scroll right                 │▓                          "
"┌──────────────────────────│alt+h        - Scroll left                  │▓─────────────────────────┐"
"│                          │                                            │▓                         │"
"└──────────────────────────│                      ▼                     │▓─────────────────────────┘"
"                           └────────────────────────────────────────────┘▓                      L:0 "
