src/snapshots/rura__app__tests__main_screen_help_small_screen.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                           ┌ Keys ──────────────────────────────────────┐                           "
"                           │                                            │▓                          "
"                           │                  Commands                  │▓                          "
"                           │enter        - Execute full command         │▓                          "
"                           │alt+\        - Execute until cursor         │▓                          "
"                           │alt+|        - Execute before cursor        │▓                          "
"                           │alt+i        - Reset input                  │▓                          "
"                           │ctrl+g       - Cancel running command       │▓                          "
"                           │                                            │▓                          "
"                           │f9           - Toggle execution details     │▓                          "
"                           │f12          - Toggle Live mode             │▓                          "
"┌──────────────────────────│f11          - Toggle Live Until Cursor mode│▓─────────────────────────┐"
"│                          │                                            │▓                         │"
"└──────────────────────────│                      ▼                     │▓─────────────────────────┘"
"                           └────────────────────────────────────────────┘▓                      L:0 "
